[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-context-window"
version = "0.1.0"
description = "Context window management for LLM agents — token counting, sliding window, prioritization, and truncation."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Darshankumar Joshi", email = "darshjme@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
